<resources>
    <string name="app_name">MyAndroid</string>
    <string name="btn_next">Next</string>
    <string name="btn_done">Done</string>
    <string name="btn_close">Close</string>

    <string name="hint_name">Name</string>

    <string name="title_first_activity">First Activity</string>
    <string name="title_second_activity">Second Activity</string>

    <string name="menu_linear_layout">Linear Layout</string>
    <string name="menu_constraint_layout">Constraint Layout</string>
    <string name="menu_activity_navigation">Activity Navigation</string>
    <string name="menu_basic_fragment">Basic Fragment</string>
    <string name="menu_bottom_navigation">Bottom Navigation</string>
    <string name="menu_navigation_component">Navigation Component</string>
    <string name="menu_architecture">Architecture</string>
    <string name="menu_call_service">Call Service</string>
    <string name="menu_save_key_value_data">Save key-value data</string>

    <string name="title_basic_fragment_activity">Basic Fragment Activity</string>
    <string name="title_first_fragment">First Fragment</string>
    <string name="title_second_fragment">Second Fragment</string>
    <string name="title_third_fragment">Third Fragment</string>

    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="title_fragment_navigation">Fragment Navigation</string>

    <string name="title_data_binding_activity">BMI</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="btn_calculate_bmi">Calculate BMI</string>

    <string name="title_shared_preferences_activity">Shared Preferences Activity</string>
    <string name="save_normal">Save Normal</string>
    <string name="save_with_encrypted">Save With Encrypted</string>

    <string name="new_case">New Case</string>
    <string name="total_case">Total Case</string>
</resources>