<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.myandroid.ui.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppButton"
                    android:onClick="@{() -> viewModel.onLinearLayoutClicked()}"
                    android:text="@string/menu_linear_layout" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppButton"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> viewModel.onConstraintLayoutClicked()}"
                    android:text="@string/menu_constraint_layout" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppButton"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> viewModel.onActivityNavigationClicked()}"
                    android:text="@string/menu_activity_navigation" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppButton"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> viewModel.onBasicFragmentClicked()}"
                    android:text="@string/menu_basic_fragment" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppButton"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> viewModel.onBottomNavigationClicked()}"
                    android:text="@string/menu_bottom_navigation" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppButton"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> viewModel.onNavigationComponentClicked()}"
                    android:text="@string/menu_navigation_component" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppButton"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> viewModel.onArchitectureClicked()}"
                    android:text="@string/menu_architecture" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppButton"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> viewModel.onCallServiceClicked()}"
                    android:text="@string/menu_call_service" />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/AppButton"
                    android:layout_marginTop="8dp"
                    android:onClick="@{() -> viewModel.onSaveKeyValueDataClicked()}"
                    android:text="@string/menu_save_key_value_data" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
